// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text overview 1 snapshot 1`] = `
<DocumentFragment>
  <span
    class="css-1s9m8o3"
  >
    Hello
  </span>
</DocumentFragment>
`;

exports[`Text overview 2 snapshot 1`] = `
<DocumentFragment>
  <span
    class="css-wm9hmn"
  >
    Hello
  </span>
</DocumentFragment>
`;

exports[`Text overview 3 snapshot 1`] = `
<DocumentFragment>
  <span
    class="css-yyr9h2"
  >
    Hello
  </span>
</DocumentFragment>
`;

exports[`Text overview 4 snapshot 1`] = `
<DocumentFragment>
  <span
    class="css-fm3b53"
  >
    Hello
  </span>
</DocumentFragment>
`;

exports[`Text overview 5 snapshot 1`] = `
<DocumentFragment>
  <span
    class="css-anwsrb"
  >
    Hello
  </span>
</DocumentFragment>
`;
